Anadir syntastic y algunas cosas de unite

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,12 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U; display-pane"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R; display-pane"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l; display-pane"
 
+# Abrir las cosas en el mismo directorio
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+
 # Cambiar prefijo por defecto a ctrl-g
 unbind C-b
 set -g prefix C-g
