--- a/tmux.conf
+++ b/tmux.conf
@@ -158,6 +158,10 @@ set -g message-bg colour166
 # List of plugins
 #set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @tpm_plugins "                 \
+  tmux-plugins/tpm                    \
+  soyuka/tmux-current-pane-hostname     \
+"
 
 #  Other examples:
 #set -g @plugin 'tmux-plugins/tmux-resurrect'
