--- a/tmux.conf
+++ b/tmux.conf
@@ -49,10 +49,13 @@ set -g mouse on
 # Split horizontal con = (mas intuitivo para mi)
 bind-key = split-window -v
 
-# paste con c-v
+# Portapapeles
+unbind [
+bind + copy-mode
 #bind -t vi-copy y copy-pipe "xclip"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
-
+#bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-pipe "xclip -sel clip -i"
 
 
 ######################
