--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,10 @@ set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
 
+# Colores para ventanas activas e inactivas
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
