--- a/tmux.conf
+++ b/tmux.conf
@@ -14,12 +14,13 @@ set -g message-bg colour221
 set -g message-attr bold
 
 # Colores para ventanas activas e inactivas
-set -g window-style 'fg=colour247,bg=colour236'
+set -g window-style 'fg=colour247,bg=colour234'
 set -g window-active-style 'fg=colour250,bg=black'
 
 
 # Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?|vifm?)(diff)?$"'
+
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L; display-pane"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D; display-pane"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U; display-pane"
@@ -110,7 +111,7 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-set -g default-terminal "term-256color"
+set -g default-terminal "screen-256color"
 
 # The modes {
 setw -g clock-mode-colour colour135
