--- a/tmux.conf
+++ b/tmux.conf
@@ -55,8 +55,8 @@ set -g mouse on
 bind-key = split-window -v
 
 # Portapapeles
-unbind [
-bind + copy-mode
+#unbind [
+#bind [ copy-mode
 #bind -t vi-copy y copy-pipe "xclip"
 #bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 bind-key -t vi-copy 'v' begin-selection
